fixed blurry skill title texts

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1615,7 +1615,6 @@
 
 		.wrapper.style3 {
 			background-color: #f4f4f4;
-			text-shadow: 1px 1px 0px #fff;
 		}
 
 		.wrapper.style4 {
