--- a/assets/css/skill-bars.css
+++ b/assets/css/skill-bars.css
@@ -35,6 +35,7 @@
 	-moz-border-radius-bottomleft:3px;
 	border-top-left-radius:3px;
 	border-bottom-left-radius:3px;
+  font-weight: bold;
 }
 
 .skillbar-title span {
